[package]
name = "dioxus-table"
version = "0.1.0"
authors = ["yjh <860622588@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["web", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.5.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
reqwest = { version = "0.12.4", features = ["json"] }
